--- a/FellowBloggerV2/Storyboards/Base.lproj/Main.storyboard
+++ b/FellowBloggerV2/Storyboards/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Search Fellow-->
+        <!--Fellow Search View Controller-->
         <scene sceneID="VAX-Hd-mcF">
             <objects>
                 <viewController storyboardIdentifier="FellowSearchVC" id="Re6-1S-cOm" customClass="FellowSearchViewController" customModule="FellowBloggerV2" customModuleProvider="target" sceneMemberID="viewController">
@@ -20,11 +20,11 @@
                         <color key="backgroundColor" name="selectedControlColor" catalog="System" colorSpace="catalog"/>
                         <viewLayoutGuide key="safeArea" id="GG2-26-qSk"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Search Fellow" image="Search" selectedImage="SearchFilled" id="OLl-ou-9oB"/>
+                    <navigationItem key="navigationItem" id="V5E-7b-tEG"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zgy-n4-h6c" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-111" y="47"/>
+            <point key="canvasLocation" x="828" y="46.326836581709152"/>
         </scene>
         <!--Feed-->
         <scene sceneID="2fF-S7-P7G">
@@ -40,7 +40,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QgX-QF-MoP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-111" y="-609"/>
+            <point key="canvasLocation" x="828" y="-609.44527736131943"/>
         </scene>
         <!--Main Tab Controller-->
         <scene sceneID="62c-9X-2nA">
@@ -53,29 +53,92 @@
                     </tabBar>
                     <connections>
                         <segue destination="hnA-Ky-Cgo" kind="relationship" relationship="viewControllers" id="MIi-bl-S44"/>
-                        <segue destination="Re6-1S-cOm" kind="relationship" relationship="viewControllers" id="cQZ-vV-OZg"/>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="6dm-rI-85Y"/>
+                        <segue destination="YMT-kr-h2h" kind="relationship" relationship="viewControllers" id="cQZ-vV-OZg"/>
+                        <segue destination="FZX-nf-lRD" kind="relationship" relationship="viewControllers" id="6dm-rI-85Y"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fy3-r2-DcX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1065" y="-63"/>
         </scene>
-        <!--Profile-->
+        <!--Profile View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController storyboardIdentifier="ProfileVC" id="BYZ-38-t0r" customClass="ProfileViewController" customModule="FellowBloggerV2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="0.63182455739999999" blue="0.5207678107" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="c5N-4V-Q5f">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ProfileCell" rowHeight="49" id="K4A-bE-QJD" customClass="ProfileCell" customModule="FellowBloggerV2" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="49"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="K4A-bE-QJD" id="0U0-wJ-0UC">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="48.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.1569241187" green="0.5672338053" blue="0.58288388319999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="c5N-4V-Q5f" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BRg-Q6-k65"/>
+                            <constraint firstItem="c5N-4V-Q5f" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="SfT-c9-bIO"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="c5N-4V-Q5f" secondAttribute="bottom" id="Xyj-wS-Xmz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="c5N-4V-Q5f" secondAttribute="trailing" id="djP-NM-ghz"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Profile" image="User" selectedImage="UserFilled" id="dAz-FX-qBy"/>
+                    <navigationItem key="navigationItem" id="bj7-rg-dlk"/>
+                    <connections>
+                        <outlet property="tableView" destination="c5N-4V-Q5f" id="2wq-aF-ftX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-111" y="752"/>
+            <point key="canvasLocation" x="828" y="751.57421289355329"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="ed6-YT-HHF">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="FZX-nf-lRD" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Profile" image="User" selectedImage="UserFilled" id="dAz-FX-qBy"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Vis-Ws-7rb">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="YEb-Sm-IFj"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Sbj-pz-bui" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-111.2" y="751.57421289355329"/>
+        </scene>
+        <!--Search Fellow-->
+        <scene sceneID="KUm-Pd-IXP">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YMT-kr-h2h" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Search Fellow" image="Search" selectedImage="SearchFilled" id="OLl-ou-9oB"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5Hn-AX-S6I">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Re6-1S-cOm" kind="relationship" relationship="rootViewController" id="LeU-0z-jd1"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Big-RF-opA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-111.2" y="46.326836581709152"/>
         </scene>
     </scenes>
     <resources>
