--- a/FellowBloggerV2/Views/ProfileHeader.xib
+++ b/FellowBloggerV2/Views/ProfileHeader.xib
@@ -10,30 +10,73 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileView" customModule="FellowBloggerV2" customModuleProvider="target">
+            <connections>
+                <outlet property="bioText" destination="Ibu-rX-gc3" id="iZe-b5-KRc"/>
+                <outlet property="bloggerName" destination="77g-3Z-mSQ" id="xd9-vP-bYo"/>
+                <outlet property="contentView" destination="iN0-l3-epB" id="kKb-Q4-0Aa"/>
+                <outlet property="coverImage" destination="zIY-Ik-30B" id="UyG-ni-EHq"/>
+                <outlet property="editButton" destination="U6f-dV-uDC" id="GhF-Hf-esM"/>
+                <outlet property="fullNameLabel" destination="n7U-0A-Fio" id="OrZ-q7-5hK"/>
+                <outlet property="profileImage" destination="9Cp-ID-IFB" id="emJ-nj-der"/>
+                <outlet property="signOutButton" destination="231-oK-UXa" id="6q9-Jw-ZIK"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="396" height="357"/>
+            <rect key="frame" x="0.0" y="0.0" width="396" height="481"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9Cp-ID-IFB" customClass="CircularImageView" customModule="FellowBloggerV2" customModuleProvider="target">
-                    <rect key="frame" x="123" y="20" width="150" height="150"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tealCover" translatesAutoresizingMaskIntoConstraints="NO" id="zIY-Ik-30B" customClass="CurvedUIImageView" customModule="FellowBloggerV2" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="20" width="396" height="200"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="200" id="jzY-pI-TfU"/>
+                    </constraints>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ProfilePH" translatesAutoresizingMaskIntoConstraints="NO" id="9Cp-ID-IFB" customClass="CircularImageView" customModule="FellowBloggerV2" customModuleProvider="target">
+                    <rect key="frame" x="29" y="167.5" width="100" height="100"/>
                     <color key="backgroundColor" red="0.1569241187" green="0.5672338053" blue="0.58288388319999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="150" id="395-lY-SKc"/>
-                        <constraint firstAttribute="width" secondItem="9Cp-ID-IFB" secondAttribute="height" multiplier="1:1" id="u4y-o6-YLZ"/>
+                        <constraint firstAttribute="height" constant="100" id="6pa-Su-AaT"/>
+                        <constraint firstAttribute="width" secondItem="9Cp-ID-IFB" secondAttribute="height" multiplier="1:1" id="e0e-EW-1k4"/>
                     </constraints>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="231-oK-UXa">
-                    <rect key="frame" x="28" y="57.5" width="75" height="75"/>
+                    <rect key="frame" x="321" y="220" width="75" height="75"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="231-oK-UXa" secondAttribute="height" multiplier="1:1" id="TDb-Ia-iTy"/>
+                        <constraint firstAttribute="height" constant="75" id="tmN-0A-KIx"/>
+                    </constraints>
                     <state key="normal" image="signOut"/>
+                    <connections>
+                        <action selector="signOutPressed:" destination="-1" eventType="touchUpInside" id="jF1-De-tDn"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U6f-dV-uDC">
-                    <rect key="frame" x="293" y="57.5" width="75" height="75"/>
+                    <rect key="frame" x="246" y="220" width="75" height="75"/>
                     <state key="normal" image="edit"/>
+                    <connections>
+                        <action selector="editPressed:" destination="-1" eventType="touchUpInside" id="4Hb-J0-eQ9"/>
+                    </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="77g-3Z-mSQ">
-                    <rect key="frame" x="50" y="180" width="296" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="77g-3Z-mSQ">
+                    <rect key="frame" x="20" y="332" width="326" height="21"/>
+                    <fontDescription key="fontDescription" name="Farah" family="Farah" pointSize="21"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="BIO!" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Ibu-rX-gc3">
+                    <rect key="frame" x="8" y="361" width="380" height="100"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="100" id="2RP-eu-mnt"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                    <dataDetectorType key="dataDetectorTypes" link="YES"/>
+                </textView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First name  Last name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n7U-0A-Fio">
+                    <rect key="frame" x="20" y="303" width="356" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -41,28 +84,36 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="9Cp-ID-IFB" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="8zR-5T-aTg"/>
-                <constraint firstItem="U6f-dV-uDC" firstAttribute="centerY" secondItem="9Cp-ID-IFB" secondAttribute="centerY" id="AlV-dZ-h0J"/>
+                <constraint firstItem="U6f-dV-uDC" firstAttribute="centerY" secondItem="231-oK-UXa" secondAttribute="centerY" id="4tm-Wg-MeF"/>
+                <constraint firstItem="231-oK-UXa" firstAttribute="top" secondItem="zIY-Ik-30B" secondAttribute="bottom" id="A6b-8g-aAS"/>
+                <constraint firstItem="zIY-Ik-30B" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="AAf-Gg-F4V"/>
+                <constraint firstItem="n7U-0A-Fio" firstAttribute="top" secondItem="231-oK-UXa" secondAttribute="bottom" constant="8" id="Akx-Kg-L7c"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="77g-3Z-mSQ" secondAttribute="trailing" constant="50" id="BbH-Gk-yWe"/>
-                <constraint firstItem="231-oK-UXa" firstAttribute="width" secondItem="9Cp-ID-IFB" secondAttribute="width" multiplier="0.5" id="C9w-aX-ryn"/>
-                <constraint firstItem="9Cp-ID-IFB" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="20" id="GOo-Tt-Xbo"/>
-                <constraint firstItem="77g-3Z-mSQ" firstAttribute="centerX" secondItem="9Cp-ID-IFB" secondAttribute="centerX" id="GfZ-qN-dpq"/>
-                <constraint firstItem="U6f-dV-uDC" firstAttribute="width" secondItem="9Cp-ID-IFB" secondAttribute="width" multiplier="0.5" id="N1M-qE-LUN"/>
-                <constraint firstItem="77g-3Z-mSQ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="50" id="NAl-eO-32C"/>
-                <constraint firstItem="9Cp-ID-IFB" firstAttribute="leading" secondItem="231-oK-UXa" secondAttribute="trailing" constant="20" id="QzT-mr-r2W"/>
-                <constraint firstItem="U6f-dV-uDC" firstAttribute="leading" secondItem="9Cp-ID-IFB" secondAttribute="trailing" constant="20" id="R4p-Vn-7Dj"/>
-                <constraint firstItem="231-oK-UXa" firstAttribute="centerY" secondItem="9Cp-ID-IFB" secondAttribute="centerY" id="hJS-1b-Dpb"/>
-                <constraint firstItem="77g-3Z-mSQ" firstAttribute="top" secondItem="9Cp-ID-IFB" secondAttribute="bottom" constant="10" id="nnL-84-D9R"/>
-                <constraint firstItem="231-oK-UXa" firstAttribute="height" secondItem="9Cp-ID-IFB" secondAttribute="height" multiplier="0.5" id="wrD-Kl-Hfj"/>
-                <constraint firstItem="U6f-dV-uDC" firstAttribute="height" secondItem="9Cp-ID-IFB" secondAttribute="height" multiplier="0.5" id="ydn-sE-thc"/>
+                <constraint firstItem="Ibu-rX-gc3" firstAttribute="top" secondItem="77g-3Z-mSQ" secondAttribute="bottom" constant="8" id="Dnv-j8-pRe"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="n7U-0A-Fio" secondAttribute="trailing" constant="20" id="MHm-1G-fXe"/>
+                <constraint firstItem="77g-3Z-mSQ" firstAttribute="top" secondItem="n7U-0A-Fio" secondAttribute="bottom" constant="8" id="MKb-ho-gc4"/>
+                <constraint firstItem="9Cp-ID-IFB" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" multiplier="0.4" id="MQH-45-cpm"/>
+                <constraint firstItem="77g-3Z-mSQ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="NAl-eO-32C"/>
+                <constraint firstItem="U6f-dV-uDC" firstAttribute="width" secondItem="231-oK-UXa" secondAttribute="width" id="OLz-PI-BU4"/>
+                <constraint firstItem="Ibu-rX-gc3" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="8" id="QEu-pF-RkC"/>
+                <constraint firstItem="U6f-dV-uDC" firstAttribute="height" secondItem="231-oK-UXa" secondAttribute="height" id="Umn-GR-Thp"/>
+                <constraint firstItem="zIY-Ik-30B" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="YNf-Cm-pTl"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Ibu-rX-gc3" secondAttribute="trailing" constant="8" id="Zrm-gC-tdm"/>
+                <constraint firstItem="zIY-Ik-30B" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="doh-pw-KsD"/>
+                <constraint firstItem="9Cp-ID-IFB" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" multiplier="0.9" constant="-8" id="jAK-oq-YFT"/>
+                <constraint firstItem="231-oK-UXa" firstAttribute="leading" secondItem="U6f-dV-uDC" secondAttribute="trailing" id="qtG-oN-6E1"/>
+                <constraint firstItem="n7U-0A-Fio" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="whZ-2A-u69"/>
+                <constraint firstItem="231-oK-UXa" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="ytt-Oc-YSK"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="155.19999999999999" y="-4.0479760119940034"/>
+            <point key="canvasLocation" x="155.19999999999999" y="51.724137931034484"/>
         </view>
     </objects>
     <resources>
+        <image name="ProfilePH" width="256" height="256"/>
         <image name="edit" width="25" height="25"/>
         <image name="signOut" width="25" height="25"/>
+        <image name="tealCover" width="1280" height="720"/>
     </resources>
 </document>
